# BombermanGameEngine

./: .gitignore  CMakeLists.txt  Class_Diagram.puml  Execution_Diagram.puml  LICENSE  README.md  install.sh  setting.conf
.github/workflows/: build.yml  build_raylib.yml
CodeAnalysis/: results.sarif
Saves/bj/: MapSave.save
Saves/dds/: MapSave.save  Players.save
Saves/df/: MapSave.save
Saves/ds/: MapSave.save  Players.save
Saves/jack/: MapSave.save
Saves/jds/: MapSave.save  Players.save
Saves/kds/: MapSave.save
Saves/nb/: MapSave.save
Saves/omz/: MapSave.save  Players.save
Saves/polo/: MapSave.save  Players.save
Saves/tets/: MapSave.save  Players.save
assets/: icon.aps  icon.rc  icon.res
assets/All/Animations/: CharacterWalk.iqm
assets/All/Models/: Bomb.mtl  BombPass.mtl  Explosion.mtl  Explosion_test.mtl  FireUp.mtl  HealthUp.mtl  SpeedUp.mtl  TheBoss.iqm
assets/Pirates/Models/: Border.mtl  Character.iqm
assets/Samurai/Models/: Border.mtl  Brick.mtl  Character.iqm  Ground.mtl  Wall.mtl
assets/Shaders/glsl100/: sdf.fs
assets/Vikings/Animation/: CharacterIdle.iqm
assets/Vikings/Models/: Border.mtl  Brick.mtl  Character.iqm  Character.mtl  Ground.mtl  Wall.mtl
bomberman.dir/Debug/: bomberman.exe.recipe
bomberman.dir/Debug/bomberman.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  bomberman.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bonus/: MapGenerator.py
cmake/: boostConfig.cmake
cmake_dep/: raylibConfig.cmake
include/: Errors.hpp  File.hpp  Map.hpp  ReadDir.hpp  Vector.hpp  Vector3T.hpp
include/WindowsEquivalent/: Bdirent.h  Bunistd.h
include/game/: KeyMap.hpp  Tags.hpp  User.hpp
include/game/managers/: AFileManager.hpp  AudioManager.hpp  ButtonManager.hpp  ExplosionManager.hpp  GameManager.hpp  GlobalManager.hpp  InputManager.hpp  SceneManager.hpp  UserManager.cpp  UserManager.hpp  WindowManager.hpp
include/game/objects/: ACollectible.hpp  ADropable.hpp  AEffect.hpp  AExplosif.hpp  Bomb.hpp  Bot.hpp  Character.hpp  Collectible.hpp  Dropable.hpp  ExplosionAnimation.hpp  GameObject.hpp  Gui.hpp  HealthUp.hpp  IEffect.hpp  Map.hpp  Player.hpp  PowerUpTile.hpp  Tile.hpp  TimedObject.hpp
include/game/scenes/: AScene.hpp  ChoosePlayersScene.hpp  ChooseProfileScene.hpp  CreditScene.hpp  EmptyScene.hpp  LoadScene.hpp  MainMenuScene.hpp  PlayGameScene.hpp  SettingsScene.hpp  SplashScreenScene.hpp  TutorialScene.hpp
include/game/systems/: Brain.cpp  Brain.hpp  LoadParser.hpp  SettingConf.hpp
include/gameEngine/: Animation.hpp  Button.hpp  DLLoader.hpp  JsonParser.hpp  SceneManager.hpp
include/gameEngine/component/: Clock.hpp  PopUp.hpp  Selector.hpp  TSelector.hpp  Timer.hpp  Transform.hpp
include/gameEngine/encapsulation/: AAudioObject.hpp  AButton.hpp  ADrawable.hpp  BAudio.hpp  BBoundingBox.hpp  BCamera.hpp  BCamera2D.hpp  BColor.hpp  BEvt.hpp  BFont.hpp  BImage.hpp  BModel.hpp  BModelAnimation.hpp  BMusic.hpp  BRectangle.hpp  BSdf.hpp  BSound.hpp  BText.hpp  BTexture2D.hpp  Button.hpp  CheckBox.hpp  Color.hpp  Colour.hpp  Font.hpp  Gamepad.hpp  InputButton.hpp  Keyboard.hpp
include/gameEngine/exceptions/: Exception.hpp  NoSceneException.hpp
include/gameEngine/interfaces/: IAudioManager.hpp  IAudioObject.hpp  IButton.hpp  ICamera.hpp  IDrawable.hpp  IFileManager.hpp  IGameObject.hpp  IInput.hpp  IInputManager.hpp  IScene.hpp  IWindowManager.hpp
include/gameEngine/managers/: AFileManager.hpp  AudioManager.hpp  ButtonManager.hpp  CheckBoxManager.hpp  InputManager.hpp  WindowManager.hpp
include/gameEngine/objects/: AGameObject.hpp  Moveable.hpp  Selector.hpp
include/gameEngine/scenes/: AScene.hpp  SceneInfo.hpp
include/gameEngine/systems/: AGameObject.hpp  BoxCollision.hpp  Collision.hpp  Move.hpp
include/utils/: Directory.hpp  File.hpp  Path.hpp  TimestampUtil.hpp  User.hpp
my_test/: main_cube.cpp  main_image.cpp  main_model.cpp  main_texture.cpp
resources/Pirates/: Character_Pirate_Captain_02.fbx
resources/models/kaya/: IdleKaya.iqm  kaya.blend1  kaya.iqm  kaya.mtl  kaya2.mtl  untitled.mtl  walkingKayaAnim.iqm
resources/models/minecraft/: uploads_files_2721977_twee.blend  uploads_files_54845_Minecraft_Bits_and_Pieces__Cycles_only__.blend
resources/western-fps-2d/3D-table/: table.mtl
resources/western-fps-2d/3D-wall/: 3D-wall.mtl
resources/western-fps-2d/skybox/: skybox.mtl
src/: Errors.cpp  File.cpp  Map.cpp  ReadDir.cpp  Serializer.cpp  Vector.cpp  WindowManager.cpp  icon.aps  main.cpp
src/SceneManager/: IScene.hpp  Menu.cpp  Pause.cpp  Pause.hpp  SceneManager.cpp  SceneManager.hpp
src/game/: CMakeLists.txt
src/game/managers/: AFileManager.cpp  AudioManager.cpp  ButtonManager.cpp  ExplosionManager.cpp  GameManager.cpp  GlobalManager.cpp  InputManager.cpp  SceneManager.cpp  UserManager.cpp  WindowManager.cpp
src/game/objects/: ACollectible.cpp  ADropable.cpp  AEffect.cpp  AExplosif.cpp  Bomb.cpp  Bot.cpp  Character.cpp  Collectible.cpp  Dropable.cpp  ExplosionAnimation.cpp  GameObject.cpp  Gui.cpp  HealthUp.cpp  Map.cpp  Player.cpp  PowerUpTile.cpp  Tile.cpp  TimedObject.cpp
src/game/objects/Effects/: AEffect.cpp  BombPass.cpp  BombUp.cpp  EffectFactory.cpp  FireUp.cpp  HealthUp.cpp  OneUp.cpp  SpeedUp.cpp
src/game/scenes/: ChoosePlayersScene.cpp  ChooseProfileScene.cpp  CreditScene.cpp  EmptyScene.cpp  LoadScene.cpp  MainMenuScene.cpp  PlayGameScene.cpp  SceneInfo.cpp  SettingsScene.cpp  SplashScreenScene.cpp  TutorialScene.cpp
src/game/systems/: Brain.cpp  LoadParser.cpp  SettingConf.cpp
src/gameEngine/: Animation.cpp  Button.cpp  JsonParser.cpp
src/gameEngine/component/: Clock.cpp  PopUp.cpp  Selector.cpp  Timer.cpp  Transform.cpp
src/gameEngine/encapsulation/: AAudioObject.cpp  AButton.cpp  ADrawable.cpp  BAudio.cpp  BBoundingBox.cpp  BCamera.cpp  BCamera2D.cpp  BColor.cpp  BEvt.cpp  BFont.cpp  BImage.cpp  BModel.cpp  (+13 more)
src/utils/: Directory.cpp  File.cpp  Path.cpp  TimestampUtil.cpp  User.cpp  Utilitaries.cpp
tests/: docker_mouli.sh  windows_compile.sh
(+34 files in other folders)
